# AnimAI

./: .dockerignore  .env.example  Dockerfile  LICENSE  Makefile  README.md  architecture.excalidraw  architecture.md  code.py  compose.yml  docker-compose.hostinger.yml  e2b.Dockerfile  e2b.toml  instructions.md  langgraph.json  novita.Dockerfile  novita.toml  pyproject.toml  requirements.txt  test-10rps.yml  test.yml
.github/workflows/: deploy-hostinger.yml
e2b_template_v2/: Dockerfile  README.md  build_dev.py  build_prod.py  template.py
graphify-out/: README.md  index.html  langgraph-workflow.mmd  module-map.mmd  runtime-architecture.mmd
manim-worker/: Dockerfile  app.py
src/: chroma_utils.py
src/agent/: analyze_user_prompt.py  enhance_prompt.py  execute_code.py  execute_code_daytona.py  execute_code_e2b.py  gemini_vlm.py  generate_code.py  generate_code_fine_tune.py  graph.py  graph_fine_tune.py  graph_state.py  llm.py  manim_code_test.py  map_reduce.py  plan_video.py  regenerate_code.py  regenerate_code_fine_tune.py  research_router.py  research_topic.py  sandbox_beam.py  source_registry.py
src/agent/fine_tune_agent/: README.md  compile_graph.py  graph_state.py
src/api/: cache_invalidation.py  language_registry.py  main.py  pre_caching.py
src/fe/: package-lock.json  package.json
src/fe/app/: globals.css  layout.tsx  page.tsx
src/manim-worker/: Dockerfile  test_daytona.py
src/observability/: __init__.py  langfuse.py
src/rag/: chunks.py  indexing.py  query_builder.py  reranker.py  retriever.py  synthetic_chunks.py
terraform/: .gitignore  deploy.sh  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_api_main.py  test_chroma_utils.py  test_configuration.py  test_execute_code.py  test_language_registry.py  test_manim_worker.py  test_research_topic.py  test_retriever.py
vtxlabs/: template.py
(+21 files in other folders)
